<resources>
    <string name="app_name">Plectrum</string>
    <string name="search">Search</string>
    <string name="artist">Artist</string>
    <string name="no_data_available">No data</string>
    <string name="price">Price</string>
    <string name="release_date">Release date</string>
    <string name="author">Author</string>
    <string name="songs">Songs</string>
    <string name="information">Information</string>
    <string name="album_image">Album image</string>
    <string name="artist_image">Artist image</string>
    <string name="albums">Albums:</string>
    <string name="movie">Movie</string>
    <string name="books">Books</string>
    <!-- Dashboard item. -->
    <string name="text_header_more">More</string>
    <string name="album_name">Album name</string>
    <string name="track_price">Track price</string>
    <string name="track">Track</string>
    <string name="navigation_albums">Albums</string>
    <string name="navigation_author">Author</string>

    <!-- Music search tab item. -->
    <string name="music_text_search_tab_track">Track</string>
    <string name="music_text_search_tab_author">Author</string>
    <string name="music_text_search_tab_album">Album</string>

    <!-- Movie search tab item. -->
    <string name="movie_text_search_tab_movie">Movie</string>
    <string name="movie_text_search_tab_director">Director</string>
    <string name="movie_text_search_tab_artist">Artist</string>

    <!-- Book search tab item. -->
    <string name="book_text_search_tab_book">Book</string>
    <string name="book_text_search_tab_audio_book">Audio book</string>
    <string name="book_text_search_tab_author">Author</string>

</resources>
