<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_baseline_queue_music_24px"
        android:title="@string/songs" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie_24px"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/ic_baseline_local_library_24px"
        android:title="@string/books" />

    <!--<item-->
        <!--android:id="@+id/navigation_home"-->
        <!--android:icon="@drawable/ic_home_black_24dp"-->
        <!--android:title="@string/title_home" />-->

    <!--<item-->
        <!--android:id="@+id/navigation_dashboard"-->
        <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
        <!--android:title="@string/title_dashboard" />-->

    <!--<item-->
        <!--android:id="@+id/navigation_notifications"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_notifications" />-->

</menu>