<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/artist_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <ProgressBar
                android:id="@+id/image_progress_bar"
                android:layout_width="42dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/AppTheme.WhiteAccent"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/author_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/author"
                android:textColor="@color/separator_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/author_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="8dp"
                android:singleLine="false"
                android:text="@string/author"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/author_text_view"
                app:layout_constraintTop_toTopOf="@+id/author_text_view" />

            <TextView
                android:id="@+id/release_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/release_date"
                android:textColor="@color/separator_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/author_text_view"
                app:layout_constraintTop_toBottomOf="@+id/information_value" />

            <TextView
                android:id="@+id/release_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:singleLine="false"
                android:text="@string/release_date"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/author_value"
                app:layout_constraintTop_toTopOf="@+id/release_date_text_view" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/price"
                android:textColor="@color/separator_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/author_text_view"
                app:layout_constraintTop_toBottomOf="@+id/release_date_value" />

            <TextView
                android:id="@+id/price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:singleLine="false"
                android:text="@string/price"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/release_date_value"
                app:layout_constraintTop_toTopOf="@+id/price_text_view" />

            <TextView
                android:id="@+id/information_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/information"
                android:textColor="@color/separator_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/author_text_view"
                app:layout_constraintTop_toBottomOf="@+id/author_value" />

            <TextView
                android:id="@+id/information_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:singleLine="false"
                android:text="@string/information"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/price_value"
                app:layout_constraintTop_toTopOf="@+id/information_text_view" />

            <TextView
                android:id="@+id/albums_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/albums"
                android:textColor="@color/separator_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/price_value"
                app:layout_constraintTop_toBottomOf="@+id/price_value" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/songs_album_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:clipToPadding="false"
                android:paddingBottom="50dp"
                android:scrollbars="vertical"
                android:text="@string/no_data_available"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="@+id/author_value"
                app:layout_constraintStart_toStartOf="@+id/author_value"
                app:layout_constraintTop_toBottomOf="@+id/albums_text_view">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>